--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    //Timber
+    // Chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
     // Splash screen
     implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
